<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cz.drekorian.android.planeswalker.settings.life.SettingsLifeViewModel" />

        <import type="cz.drekorian.android.planeswalker.settings.SettingsManager" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/part_toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_life_description"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_small"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:lifeCount="@{viewModel.lifeCount}"
            tools:checkedButton="@id/standard">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/standard"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:onClick="@{() -> viewModel.onLifeCountClick(SettingsManager.DEFAULT_LIFE_COUNT_STANDARD)}"
                android:text="@string/fragment_settings_life_life_value_standard"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/brawl"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:onClick="@{() -> viewModel.onLifeCountClick(SettingsManager.DEFAULT_LIFE_COUNT_BRAWL)}"
                android:text="@string/fragment_settings_life_life_value_brawl"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/commander"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:onClick="@{() -> viewModel.onLifeCountClick(SettingsManager.DEFAULT_LIFE_COUNT_COMMANDER)}"
                android:text="@string/fragment_settings_life_life_value_commander"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/horizontal_margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
